Small improvents from the (Re)discover the Symfony Console talk.

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "huelight",
+    "bin": [
+        "./huelight"
+    ],
     "require": {
         "symfony/console": "^6.0",
         "syntaxseed/phue": "^1.8"
